--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,6 +1,7 @@
 body {
     padding: 0;
-    margin: 0
+    margin: 0;
+    background-image: url("lol2.png");
 }
 
 #unity-container {
@@ -22,6 +23,19 @@ body {
     background: #20aab4;
     background: url('Tutorial.png') no-repeat center;
     background-size: contain;
+    border-radius: 25px;
+}
+
+#unity-canvas-overlay {
+    position: absolute;
+    background: #20aab4;
+    background: url('Tutorial.png') no-repeat center;
+    background-size: cover;
+    width: 110%;
+    height: 94%;
+    right: -5%;
+    bottom: 0%;
+    /* //src: url('Tutorial.png') no-repeat center; */
 }
 
 .unity-mobile #unity-canvas {
@@ -29,10 +43,23 @@ body {
     height: 100%
 }
 
+#unity-start-bar {
+    position: absolute;
+    right: 10%;
+    bottom: 12%;
+    background: url('Start.png') no-repeat center;
+    background-size: contain;
+    margin: 0%;
+    padding: 0%;
+    width: 250px;
+    height: 60px;
+    display: none;
+}
+
 #unity-loading-bar {
     position: absolute;
     right: 2%;
-    bottom: 20%;
+    bottom: 10%;
     transform: translate(-50%, -50%);
     background: rgb(54, 54, 54);
     margin: 0%;
@@ -79,12 +106,46 @@ body {
 }
 
 #unity-build-title {
+    float: left;
+    margin-right: 10px;
+    line-height: 38px;
+    font-family: arial;
+    font-weight: bold;
+    font-size: 32px;
+    display: flex;
+}
+
+#unity-build-link1 {
+    float: right;
+    width: 32px;
+    height: 32px;
+    margin-left: 4px;
+    align-items: center;
+    background: url('l.png') no-repeat;
+    background-size: contain;
+}
+
+#unity-build-link2 {
+    float: right;
+    width: 30px;
+    height: 30px;
+    align-items: center;
+    margin-left: 4px;
+    background: url('m.png') no-repeat;
+    background-size: contain;
+}
+
+#unity-build-contact {
     float: right;
     margin-right: 10px;
     line-height: 38px;
     font-family: arial;
-    font-size: 18px
+    font-weight: bold;
+    font-size: 32px;
+
 }
+
+
 
 #unity-fullscreen-button {
     float: right;
